samples/_failures_safe/1761694982_c94146_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c144d44.c: In function ‘main’:
./samples/SAFE/__tmp_1c144d44.c:158:9: error: expected declaration or statement at end of input
  158 |         printf("Select operation: ");
      |         ^~~~~~
./samples/SAFE/__tmp_1c144d44.c:158:9: error: expected declaration or statement at end of input
